<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:hint="@string/titulo_do_filme"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:hint="@string/descricao"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/spinnerStatus"
        style="@style/SpinnerStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:entries="@array/status_options" />


</LinearLayout>